# miniclaude

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/builtin/explorer/: agent.md
agents/builtin/implementer/: agent.md
agents/builtin/planner/: agent.md
agents/builtin/reviewer/: agent.md
agents/builtin/tester/: agent.md
agents/builtin/verifier/: agent.md
backend/: build_backend.py  cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  feishu_client.py  ollama_adapter.py  openai_adapter.py  provider_manager.py
backend/api/: app.py
backend/api/middleware/: auth.py
backend/api/routes/: chat_completions.py  feishu.py  feishu_handler.py  feishu_security.py  mcp.py  providers.py  sessions.py  websocket.py  websocket_support.py
backend/cli_support/: __init__.py  console.py  console_helpers.py  display.py  formatting.py  markdown.py  models.py  session.py  spinner.py
backend/common/: __init__.py  errors.py  feishu.py
backend/config/: http_client.json  http_client.py  settings.py
backend/core/: __init__.py  system_prompt.py
backend/schemas/: __init__.py  completion.py  feishu.py  provider.py  session.py
backend/storage/: __init__.py  database.py  models.py  serializers.py  session_store.py
backend/tests/: conftest.py
docs/architecture/: overview.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
tasks/: ARCHITECTURE.md
(+101 files in other folders)
